<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moby_bringup</name>
  <version>1.0.0</version>
  <description>Neuromeka Moby Driver</description>
  <maintainer email="nguyen.pham@neuromeka.com">ubuntu</maintainer>
  <license>BSD-3-Clause</license>

  <build_depend>rosidl_default_generators</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- <depend>action_msgs</depend> -->
  <depend>rclpy</depend>
  <!-- <depend>control_msgs</depend> -->
  <!-- <depend>trajectory_msgs</depend> -->
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moby_description</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sick_scan</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
